--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   build_runner: 2.4.9
   riverpod_generator: 2.4.0
   riverpod_lint: ^2.3.10
+  analyzer: ^6.4.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
