--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   sembast_web: 2.3.0
   path_provider: 2.1.3
   uuid: ^4.5.0
+  flutter_quill: ^10.5.3
 
 dev_dependencies:
   flutter_test:
