--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter    
-  mocktail: 1.0.3
+  mocktail: ^1.0.4
   build_runner: 2.4.9
   riverpod_generator: 2.4.0
   riverpod_lint: ^2.3.10
