--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   path_provider: 2.1.3
   uuid: ^4.5.0
   flutter_quill: ^10.5.3
+  fl_chart: ^0.69.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
